--- a/bootstrap_stater/src/main/resources/templates/gw/ntcWrite.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/ntcWrite.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{layouts/layout}">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>공지 등록</title>
+<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet"
+	type="text/css">
+<link
+	href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+	rel="stylesheet">
+<link href="css/sb-admin-2.min.css" rel="stylesheet">
 </head>
 <body>
-<form method="post" th:action="@{/notice/save}">
-  <div class="form-group">
-    <label>제목</label>
-    <input type="text" name="title" class="form-control" />
-  </div>
-  <div class="form-group">
-    <label>내용</label>
-    <textarea name="content" class="form-control"></textarea>
-  </div>
-  <button type="submit" class="btn btn-primary">등록</button>
-</form>
+	<th:block layout:fragment="content">
+		<div class="container-fluid">
+			<h1 class="h3 mb-4 text-gray-800">일정 등록</h1>
+			<div class="card shadow mb-4">
+				<div class="card-body">
+					<form method="post" th:action="@{/notice/save}">
+						<div class="form-group">
+							<label>제목</label> <input type="text" name="title"
+								class="form-control" />
+						</div>
+						<div class="form-group">
+							<label>내용</label>
+							<textarea name="content" class="form-control"></textarea>
+						</div>
+						<button type="submit" class="btn btn-primary">등록</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</th:block>
 </body>
 </html>
