--- a/bootstrap_stater/src/main/resources/templates/gw/schWrite.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schWrite.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout}">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+  <meta charset="UTF-8">
+  <title>일정 등록</title>
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link href="css/sb-admin-2.min.css" rel="stylesheet">
 </head>
 <body>
+  <th:block layout:fragment="content">
+    <div class="container-fluid">
+      <h1 class="h3 mb-4 text-gray-800">일정 등록</h1>
 
+      <div class="card shadow mb-4">
+        <div class="card-body">
+          <form th:action="@{/schedule/write}" method="post">
+            <div class="form-group">
+              <label for="title">일정 제목</label>
+              <input type="text" class="form-control" id="title" name="title" required>
+            </div>
+
+            <div class="form-group">
+              <label for="content">일정 내용</label>
+              <textarea class="form-control" id="content" name="content" rows="4"></textarea>
+            </div>
+
+            <div class="form-group">
+              <label for="date">날짜</label>
+              <input type="date" class="form-control" id="date" name="date" required>
+            </div>
+
+            <div class="form-group">
+              <label for="time">시간</label>
+              <input type="time" class="form-control" id="time" name="time">
+            </div>
+
+            <button type="submit" class="btn btn-primary">등록</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </th:block>
 </body>
 </html>
