--- a/bootstrap_stater/src/main/resources/templates/gw/schedule.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schedule.html
@@ -18,40 +18,43 @@
 			<div class="row">
 				<!-- 전체 일정 -->
 				<div class="col-md-6 mb-4">
-					<div class="card shadow">
+					<div
+						class="card-header py-3 d-flex justify-content-between align-items-center">
 						<a href="#collapse1"
 							class="card-header py-3 d-flex justify-content-between align-items-center"
 							data-toggle="collapse" role="button" aria-expanded="true"
 							aria-controls="collapse2">
 							<h6 class="m-0 font-weight-bold text-primary">전체 일정관리</h6>
-							<button class="btn btn-sm btn-success" data-toggle="modal" data-target="#scheduleModal">일정 등록</button>
-						</a>
-						<div class="collapse show" id="collapse1">
-							<div class="card-body">
-								<div class="table-responsive">
-									<div id="calendar1" style="max-width: 100%; margin: auto;"></div>
-								</div>
+						</a> <a th:href="@{/groupware/schWrite}"
+							class="btn btn-sm btn-success">일정 등록</a>
+					</div>
+					<div class="collapse show" id="collapse1">
+						<div class="card-body">
+							<div class="table-responsive">
+								<div id="calendar1" style="max-width: 100%; margin: auto;"></div>
 							</div>
 						</div>
 					</div>
 				</div>
 
+
 				<!-- 부서별 일정 -->
 				<div class="col-md-6 mb-4">
-					<div class="card shadow">
+					<div
+						class="card-header py-3 d-flex justify-content-between align-items-center">
 						<a href="#collapse2"
 							class="card-header py-3 d-flex justify-content-between align-items-center"
 							data-toggle="collapse" role="button" aria-expanded="true"
 							aria-controls="collapse2">
 							<h6 class="m-0 font-weight-bold text-primary">부서별 일정관리</h6>
-							<button class="btn btn-sm btn-success" data-toggle="modal" data-target="#scheduleModal">일정 등록</button>
-						</a>
-						<div class="collapse show" id="collapse2">
-							<div class="card-body">
-								<div class="table-responsive">
-									<div id="calendar2" style="max-width: 100%; margin: auto;"></div>
+						</a> <a th:href="@{/groupware/schWrite}"
+							class="btn btn-sm btn-success">일정 등록</a>
+					</div>
+					<div class="collapse show" id="collapse2">
+						<div class="card-body">
+							<div class="table-responsive">
+								<div id="calendar2" style="max-width: 100%; margin: auto;"></div>
 
-								</div>
 							</div>
 						</div>
 					</div>
@@ -59,33 +62,5 @@
 			</div>
 		</div>
 	</th:block>
-	
-<!-- 	일정등록 모달 -->
-	<div class="modal fade" id="scheduleModal" tabindex="-1" role="dialog" aria-labelledby="scheduleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <form class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="scheduleModalLabel">일정 등록</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="닫기">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="form-group">
-          <label>일정 제목</label>
-          <input type="text" class="form-control" name="title" />
-        </div>
-        <div class="form-group">
-          <label>날짜</label>
-          <input type="date" class="form-control" name="date" />
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-primary">등록</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
-      </div>
-    </form>
-  </div>
-</div>
 </body>
 </html>
