--- a/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
@@ -32,17 +32,15 @@
 
     <!-- Core plugin JavaScript-->
     <script src="/bootstrap/vendor/jquery-easing/jquery.easing.min.js"></script>
+	<script src="/bootstrap/js/sb-admin-2.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="/bootstrap/js/sb-admin-2.min.js"></script>
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
 	
 	<script src="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-lite.min.js"></script>
-
 
 </head>
 <body id="page-top">
@@ -61,10 +59,10 @@
 				      <form class="form-horizontal" th:action="@{/appr}" th:object="${apprDTO}" method="post" enctype="multipart/form-data">
 				        
 				        <div class="form-group">
-						  <label class="col-sm-2 control-label" for="datepicker">일자</label>
+						  <label class="col-sm-2 control-label" for="createAt">일자</label>
 						  <div class="col-sm-4">
 						    <div class="input-group date datepicker">
-						      <input type="text" class="form-control datepicker" th:field="*{createDate}" placeholder="YYYY-MM-DD" readonly required>
+						      <input type="text" class="form-control datepicker" id="createAt" th:field="*{createAt}" placeholder="YYYY-MM-DD" readonly required>
 						      <span class="input-group-addon">
 						        <span class="glyphicon glyphicon-calendar"></span>
 						      </span>
