--- a/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
@@ -53,13 +53,14 @@
 				
 				  <div class="panel panel-primary">
 				    <div class="panel-heading">
-				      <h3 class="panel-title">기안서작성 | 지출결의서</h3>
+				      <h3 class="panel-title">기안서작성 | 연차신청서(문서 id로 조회해서 보여주는곳)</h3>
 				    </div>
 				    <div class="panel-body">
 				      <form class="form-horizontal" th:action="@{/appr}" th:object="${apprDTO}" method="post" enctype="multipart/form-data">
+				      <input type="hidden" th:field="*{reqType}" class="form-control"><!-- 문서타입 -->
 				        
 				        <div class="form-group">
-						  <label class="col-sm-2 control-label" for="createAt">일자</label>
+						  <label class="col-sm-2 control-label" for="createAt">기안일</label>
 						  <div class="col-sm-4">
 						    <div class="input-group date datepicker">
 						      <input type="text" class="form-control datepicker" id="createAt" th:field="*{createAt}" placeholder="YYYY-MM-DD" readonly required>
@@ -82,7 +83,7 @@
 						</div> -->
 				
 				        <div class="form-group">
-				          <label class="col-sm-2 control-label">제목</label>
+				          <label class="col-sm-2 control-label">문서제목</label>
 				          <div class="col-sm-8">
 				            <input type="text" th:field="*{title}" class="form-control" maxlength="200" required>
 				          </div>
@@ -103,22 +104,16 @@
 				          </div>
 				        </div>
 				
-				        <!-- <div class="form-group">
-				          <label class="col-sm-2 control-label">참조자</label>
-				          <div class="col-sm-8">
-				            <input type="text" name="referrer" class="form-control" placeholder="참조자">
-				          </div>
-				        </div> -->
-				
-				        <!-- <div class="form-group">
-				          <label class="col-sm-2 control-label">공유자</label>
-				          <div class="col-sm-8">
-				            <input type="text" name="shared" class="form-control" placeholder="공유자">
-				          </div>
-				        </div> -->
 				
 				        <div class="form-group">
-				          <label class="col-sm-2 control-label">구분</label>
+				          <label class="col-sm-2 control-label">결재문서</label>
+				          <div class="col-sm-8">
+				            <a href="#" class="btn btn-link">전표 출력물</a>
+				          </div>
+				        </div>
+				
+				        <div class="form-group">
+				          <label class="col-sm-2 control-label">휴가 종류</label>
 				          <div class="col-sm-4">
 				            <input type="text" th:field="*{reqType}" class="form-control" placeholder="구분">
 				          </div>
@@ -130,35 +125,52 @@
 				            </select>
 				          </div> -->
 				        </div>
-				
+				        
+				        
 				        <div class="form-group">
-				          <label class="col-sm-2 control-label">결재문서</label>
+						  <label class="col-sm-2 control-label" for="">기간 및 일시</label>
+						  <div class="col-sm-3">
+						    <div class="input-group date datepicker">
+						      <input type="text" class="form-control datepicker" id="createAt" th:field="*{createAt}" placeholder="YYYY-MM-DD" readonly required>
+						      <span class="input-group-addon">
+						        <span class="glyphicon glyphicon-calendar"></span>
+						      </span>
+						    </div>
+						  </div>
+						  
+						  <div class="col-sm-3">
+						    <div class="input-group date datepicker">
+						      <input type="text" class="form-control datepicker" id="createAt" th:field="*{createAt}" placeholder="YYYY-MM-DD" readonly required>
+						      <span class="input-group-addon">
+						        <span class="glyphicon glyphicon-calendar"></span>
+						      </span>
+						    </div>
+						  </div>
+						</div>
+						
+						<div class="form-group">
+				          <label class="col-sm-2 control-label">반차 여부</label>
 				          <div class="col-sm-8">
-				            <a href="#" class="btn btn-link">전표 출력물</a>
+				            <a href="#" class="btn btn-info">추가</a>
 				          </div>
 				        </div>
-				
+				        
+				        
+				        
 				        <div class="form-group">
 				          <label class="col-sm-2 control-label">첨부</label>
 				          <div class="col-sm-8">
 				            <a href="#" class="btn btn-info">추가</a>
 				          </div>
 				        </div>
-				        
-				        <div class="form-group">
-				          <label class="col-sm-2 control-label">라벨</label>
-				          <div class="col-sm-8">
-				           <!--  <input type="text" class="form-control" placeholder="라벨"> -->
-				          </div>
-				        </div>
 				
 				        <div class="form-group">
 				          <div class="col-sm-offset-2 col-sm-10">
 				            <button type="submit" class="btn btn-primary">저장/결재(F7)</button>
-				            <button type="button" class="btn btn-default">미리보기</button>
+				            <!-- <button type="button" class="btn btn-default">미리보기</button>
 				            <button type="button" class="btn btn-default">양식샘플보기</button>
 				            <button type="button" class="btn btn-default">My도장/서명</button>
-				            <button type="button" class="btn btn-default">닫기</button>
+				            <button type="button" class="btn btn-default">닫기</button> -->
 				          </div>
 				        </div>
 				        
