--- a/bootstrap_stater/src/main/resources/templates/gw/notice.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/notice.html
@@ -5,12 +5,6 @@
 <head>
 <meta charset="UTF-8">
 <title>그룹웨어 - 공지사항</title>
-<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet"
-	type="text/css">
-<link
-	href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-	rel="stylesheet">
-<link href="css/sb-admin-2.min.css" rel="stylesheet">
 </head>
 <body>
 	<th:block layout:fragment="content">
@@ -18,21 +12,24 @@
 			<div class="row">
 				<div class="col-md-6 mb-4">
 					<div class="card shadow">
-						<div class="card-header d-flex justify-content-between align-items-center">
+						<div
+							class="card-header d-flex justify-content-between align-items-center">
 							<a href="#collapse1" class="text-decoration-none text-primary"
 								data-toggle="collapse" role="button" aria-expanded="true"
 								aria-controls="collapse1">
 								<h6 class="m-0 font-weight-bold">전체 공지사항</h6>
-							</a> <a th:href="@{/notice/ntcWrite}"
-								class="btn btn-sm btn-primary">공지 등록</a>
+							</a> <a th:href="@{/notice/ntcWrite}" class="btn btn-sm btn-primary">공지
+								등록</a>
 						</div>
 
 						<div class="collapse show" id="collapse1">
 							<div class="card-body">
 								<div class="table-responsive">
-									<table id="dataTable1" class="table table-bordered table-striped table-hover">
+									<table id="dataTable1"
+										class="table table-bordered table-striped table-hover">
 										<thead>
 											<tr>
+												<th>순 번</th>
 												<th>공지 제목</th>
 												<th>공지 내용</th>
 												<th>작성자</th>
@@ -40,16 +37,17 @@
 											</tr>
 										</thead>
 										<tbody>
-											<tr th:each="notice : ${allNotices}">
-												<td>
-													<a href="#" data-toggle="modal" data-target="#noticeModal"
-													   th:attr="data-title=${notice.title}, data-content=${notice.content}, data-author=${notice.author}, data-date=${#temporals.format(notice.createdAt, 'yyyy-MM-dd')}">
-														<span th:text="${notice.title}">공지 제목</span>
-													</a>
-												</td>
-												<td th:text="${notice.content}">공지 내용</td>
-												<td th:text="${notice.author}">작성자</td>
-												<td th:text="${#temporals.format(notice.createdAt, 'yyyy-MM-dd')}">등록일</td>
+											<tr th:each="notice, stat : ${notices}">
+												<td th:text="${stat.count}">순번</td>
+												<td><a href="#" data-toggle="modal"
+													data-target="#noticeModal"
+													th:attr="data-title=${notice.notTitle}, data-content=${notice.notContent}, data-author=${notice.empId}, data-date=${#dates.format(notice.createAt, 'yyyy-MM-dd')}">
+														<span th:text="${notice.notTitle}">공지 제목</span>
+												</a></td>
+												<td th:text="${notice.notContent}">공지 내용</td>
+												<td th:text="${notice.empId}">작성자</td>
+												<td
+													th:text="${#dates.format(notice.createAt, 'yyyy-MM-dd')}">등록일</td>
 											</tr>
 										</tbody>
 									</table>
@@ -67,17 +65,18 @@
 								data-toggle="collapse" role="button" aria-expanded="true"
 								aria-controls="collapse2">
 								<h6 class="m-0 font-weight-bold">부서별 공지사항</h6>
-							</a> <a th:href="@{/groupware/ntcWrite}"
-								class="btn btn-sm btn-primary">공지 등록</a>
+							</a> <a th:href="@{/notice/ntcWrite}" class="btn btn-sm btn-primary">공지
+								등록</a>
 						</div>
 
 						<div class="collapse show" id="collapse2">
 							<div class="card-body">
 								<div class="table-responsive">
-									<table id="dataTable2" class="table table-bordered"
-										width="100%" cellspacing="0">
+									<table id="dataTable2"
+										class="table table-bordered table-striped table-hover">
 										<thead>
 											<tr>
+												<th>순 번</th>
 												<th>공지 제목</th>
 												<th>공지 내용</th>
 												<th>작성자</th>
@@ -85,16 +84,19 @@
 											</tr>
 										</thead>
 										<tbody>
-											<tr th:each="notice : ${deptNotices}">
-												<td>
-													<a href="#" data-toggle="modal" data-target="#noticeModal"
-													   th:attr="data-title=${notice.title}, data-content=${notice.content}, data-author=${notice.author}, data-date=${#temporals.format(notice.createdAt, 'yyyy-MM-dd')}">
-														<span th:text="${notice.title}">공지 제목</span>
-													</a>
-												</td>
-												<td th:text="${notice.content}">공지 내용</td>
-												<td th:text="${notice.author}">작성자</td>
-												<td th:text="${#temporals.format(notice.createdAt, 'yyyy-MM-dd')}">등록일</td>
+											<tr th:each="notice, stat : ${deptNotices}">
+												<td th:text="${stat.count}">순번</td>
+
+												<td><a href="#" data-toggle="modal"
+													data-target="#noticeModal"
+													th:attr="data-title=${notice.notTitle}, data-content=${notice.notContent}, data-author=${notice.empId}, data-date=${#dates.format(notice.createAt, 'yyyy-MM-dd')}">
+														<span th:text="${notice.notTitle}">공지 제목</span>
+												</a></td>
+
+												<td th:text="${notice.notContent}">공지 내용</td>
+												<td th:text="${notice.empId}">작성자</td>
+												<td
+													th:text="${#dates.format(notice.createAt, 'yyyy-MM-dd')}">등록일</td>
 											</tr>
 										</tbody>
 									</table>
@@ -106,65 +108,34 @@
 			</div>
 		</div>
 	</th:block>
-
-	<div class="modal fade" id="noticeModal" tabindex="-1" role="dialog" aria-labelledby="noticeModalLabel" aria-hidden="true">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="noticeModalLabel">공지사항 상세 내용</h5>
-					<button class="close" type="button" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">×</span>
-					</button>
-				</div>
-				<div class="modal-body">
-					<h4 id="modalTitle"></h4>
-					<p><small class="text-muted mr-3" id="modalAuthor"></small><small class="text-muted" id="modalDate"></small></p>
-					<hr>
-					<pre id="modalContent"></pre>
-				</div>
-				<div class="modal-footer">
-					<button class="btn btn-secondary" type="button" data-dismiss="modal">닫기</button>
-				</div>
-			</div>
-		</div>
-	</div>
-
-<th:block layout:fragment="scripts">
-	<script>
-		$(document).ready(function() {
-			$('#dataTable1').DataTable({
-				dom: "<'row mb-3'<'col-sm-6'l><'col-sm-6'f>>" +
-		           "<'row'<'col-sm-12'tr>>" +
-		           "<'row mt-2'<'col-sm-5'i><'col-sm-7'p>>",
-				paging: true,
-			    searching: true,
-			    info: true
-			});
-			$('#dataTable2').DataTable({
-				dom: "<'row mb-3'<'col-sm-6'l><'col-sm-6'f>>" +
-		           "<'row'<'col-sm-12'tr>>" +
-		           "<'row mt-2'<'col-sm-5'i><'col-sm-7'p>>",
-				paging: true,
-			    searching: true,
-			    info: true
-			});
-
-			// **모달에 공지 내용 채우기**
-			$('#noticeModal').on('show.bs.modal', function (event) {
-				var button = $(event.relatedTarget);
-				var title = button.data('title');
-				var content = button.data('content');
-				var author = button.data('author');
-				var date = button.data('date');
-
-				var modal = $(this);
-				modal.find('#modalTitle').text(title);
-				modal.find('#modalAuthor').text('작성자: ' + author);
-				modal.find('#modalDate').text('등록일: ' + date);
-				modal.find('#modalContent').text(content);
-			});
-		});
-	</script>
-</th:block>
-
+<div class="modal fade" id="noticeModal" tabindex="-1" role="dialog"
+    aria-labelledby="noticeModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="noticeModalLabel">공지사항 상세 내용</h5>
+                <button class="close" type="button" data-dismiss="modal"
+                    aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <h4 id="modalTitle"></h4>
+                <p>
+                    <small class="text-muted mr-3" id="modalAuthor"></small><small
+                        class="text-muted" id="modalDate"></small>
+                </p>
+                <hr>
+                <pre id="modalContent"></pre>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button"
+                    data-dismiss="modal">닫기</button>
+            </div>
+        </div>
+    </div>
+</div>
+	<th:block layout:fragment="scripts">
+		<script src="/bootstrap/js/groupware/notice.js"></script>
+	</th:block>
 </html>
