--- a/bootstrap_stater/src/main/resources/templates/gw/ntcWrite.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/ntcWrite.html
@@ -18,24 +18,40 @@
 			<h1 class="h3 mb-4 text-gray-800">공지 등록</h1>
 			<div class="card shadow mb-4">
 				<div class="card-body">
-					<form method="post" th:action="@{/notice/save}" th:object="${noticeDTO}">
-					    <div class="form-group">
-					        <label for="notTitle">제목</label>
-					        <input type="text" th:field="*{notTitle}" id="notTitle" class="form-control" />
-					    </div>
-					    <div class="form-group">
-					        <label for="notContent">내용</label>
-					        <textarea th:field="*{notContent}" id="notContent" class="form-control"></textarea>
-					    </div>
-					    <div class="form-group">
-					        <label for="notType">유형</label>
-					        <input type="text" th:field="*{notType}" id="notType" class="form-control" />
-					    </div>
-					    <div class="form-group">
-					        <label for="empId">작성자 ID</label>
-					        <input type="text" th:field="*{empId}" id="empId" class="form-control" />
-					    </div>
-					    <button type="submit" class="btn btn-primary">등록</button>
+					<form method="post" th:action="@{/notice/save}"
+						th:object="${noticeDTO}">
+						<div class="form-group">
+							<label for="notTitle">제목</label> <input type="text"
+								th:field="*{notTitle}" id="notTitle" class="form-control" />
+						</div>
+						<div class="form-group">
+							<label for="notContent">내용</label>
+							<textarea th:field="*{notContent}" id="notContent"
+								class="form-control"></textarea>
+						</div>
+<!-- 						<div class="form-group"> -->
+<!-- 							<label for="notType">유형</label> <select th:field="*{notType}" -->
+<!-- 								id="notType" class="form-control"> -->
+<!-- 								<option value="">-- 부서를 선택하세요 --</option> -->
+<!-- 								<option th:each="dept : ${departments}" th:value="${dept.code}" -->
+<!-- 									th:text="${dept.name}"></option> -->
+<!-- 							</select> -->
+<!-- 						</div> -->
+						<div class="form-group">
+							<label for="notType">유형</label> <select th:field="*{notType}"
+								id="notType" class="form-control">
+								<option value="">-- 부서를 선택하세요 --</option>
+								<option value="인사팀">인사팀</option>
+								<option value="구매팀">구매팀</option>
+								<option value="생산팀">생산팀</option>
+								<option value="품질팀">품질팀</option>
+							</select>
+						</div>
+						<div class="form-group">
+							<label for="empId">작성자 ID</label> <input type="text"
+								th:field="*{empId}" id="empId" class="form-control" />
+						</div>
+						<button type="submit" class="btn btn-primary">등록</button>
 					</form>
 				</div>
 			</div>
